adds icon to indicate name is editable
this fixes #195